# newmedia

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  fly.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci-rs.yml  ci-ts.yml  fly.yml
crates/bevy_frame_capture/: Cargo.toml
crates/bevy_frame_capture/src/: image_copy.rs  lib.rs  scene.rs
crates/bevy_headless/: Cargo.toml
crates/bevy_headless/src/: lib.rs  node.rs  plugin.rs  utils.rs
crates/bevy_remote_asset/: Cargo.toml
crates/bevy_remote_asset/src/: lib.rs  web_asset_plugin.rs  web_asset_source.rs
crates/bevy_ws_server/: Cargo.toml
crates/bevy_ws_server/src/: lib.rs
crates/minimal/: Cargo.toml
crates/minimal/src/: main.rs
crates/minimal_example/: Cargo.toml
crates/minimal_example/src/: main.rs
crates/new_media/: Cargo.toml
crates/new_media/src/: main.rs  server.rs
demo/: next.config.mjs  package.json
demo/app/: layout.tsx  page.tsx
demo/components/: Canvas.tsx  LoadingPlaceholder.tsx  WebSocketExample.tsx
demo/utils/: shadcnPlugin.ts
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/new_media/: Cargo.toml
examples/new_media/src/: controls.rs  main.rs  server.rs
labwc/: autostart
new_media/: Cargo.toml
new_media/src/: asset.rs  controls.rs  frame_capture.rs  llm.rs  main.rs  server.rs  video.rs
sway/: autostart
www/: config.mjs  deploy.mjs  next.config.mjs  package.json  remotion.config.ts  vercel.json
www/app/: global.css  layout.tsx
www/app/api/lambda/progress/: route.ts
www/app/api/lambda/render/: route.ts
www/app/editor/: page.tsx
www/app/fal/: page.tsx
www/components/: Controller.tsx  WebSocketExample.tsx  excalidrawWrapper.tsx
www/remotion/MyComp/: Main.tsx
www/types/: constants.ts  schema.ts
