[workspace]
resolver = "2"
members = ["crates/*"]

package.rust-version = "1.75.0"

[profile.dev]
opt-level = 1 # Small amount of optimizations

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for binanry size.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Only use one codegen unit, to imcrease optimization.
panic = "abort"   # Abort on panic, instead of unwinding the stack.

[profile.prod]
inherits = "release"
strip = true         # Automatically strip symbols from the binary.


[workspace.dependencies]
anyhow = "1.0.75"
async-net = "2.0.0"
base64 = "0.21.5"
bevy = { version = "0.12.1", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
] }
bevy_panorbit_camera = "0.10.0"
crossbeam-channel = "0.5.10"
log = "0.4.20"
pretty_env_logger = "0.5.0"
wgpu = { version = "0.17.1", features = ["vulkan-portability"] }
tungstenite = "0.21.0"
