[package]
name = "bevy_ws_server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow = {workspace = true}
base64 = {workspace = true}
bevy = { version = "0.12.1", default-features = false, features = ["multi-threaded"] }
async-net = {workspace = true}
futures = "0.3.29"
async-tungstenite = "0.24.0"
log = {workspace = true}
crossbeam-channel = {workspace = true}
async-channel = "2.1.0"
async-native-tls = "0.5.0"
smol = "2.0.0"
tungstenite = {workspace = true}
pollster = "0.3.0"
