[package]
name = "minimal"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_frame_capture = { path = "../../crates/bevy_frame_capture"}
log = { workspace = true }
pretty_env_logger = { workspace = true }
